# zlibs

./: .codechecker.yml  .gitignore  LICENSE  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: app.cmake  app.conf  presets.yml
app/src/: main.cpp
module/: Kconfig
module/src/: CMakeLists.txt  Kconfig
module/src/drivers/: CMakeLists.txt  Kconfig
module/src/drivers/uart_hw/: CMakeLists.txt  Kconfig  README.md  uart_hw.cpp
module/src/drivers/uart_mock/: CMakeLists.txt  Kconfig  README.md
module/src/drivers/usb_hw/: CMakeLists.txt  Kconfig  README.md  usb_hw.cpp
module/src/drivers/usb_mock/: CMakeLists.txt  Kconfig  README.md  usb_mock.cpp
module/src/utils/: CMakeLists.txt  Kconfig
module/src/utils/emueeprom/: CMakeLists.txt  Kconfig  README.md  emueeprom.cpp
module/src/utils/filters/: CMakeLists.txt  Kconfig  README.md  filters.cpp
module/src/utils/lessdb/: CMakeLists.txt  Kconfig  README.md  lessdb.cpp
module/src/utils/midi/: CMakeLists.txt  Kconfig  README.md  midi.cpp
module/src/utils/misc/: CMakeLists.txt  Kconfig  README.md
module/src/utils/motor_control/: CMakeLists.txt  Kconfig  README.md  motor.cpp  (+1 more)
tests/include/tests/: tests_common.h
tests/src/utils/filters/: CMakeLists.txt  filters_test.cpp  prj.conf  testcase.yaml
tests/src/utils/settings/: CMakeLists.txt  prj.conf  settings_test.cpp  testcase.yaml
tests/src/utils/settings/boards/: native_sim_native_64.overlay
tests/src/utils/signaling/: CMakeLists.txt  prj.conf  signaling_test.cpp  testcase.yaml
zephyr/: module.yml
(+135 files in other folders)
